--- a/style.css
+++ b/style.css
@@ -184,11 +184,11 @@ footer{
 footer .text span{
   font-size: 17px;
   font-weight: 400;
-  color: black;
+  color: red;
 }
 footer .text span a{
   font-weight: 500;
-  color: black;
+  color: red;
 }
 footer .text span a:hover{
   text-decoration: underline;
